정온 회원가입 구현중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=project
 
 server.port=8099
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/project?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/project?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=local
 spring.datasource.password=mysql
 
