--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.check-template-location=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
