--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -4,17 +4,17 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-nMpj-6R27
 spring.security.oauth2.client.registration.google.scope=profile,email
 
 ##naver
-spring.security.oauth2.client.registration.naver.client-name=naver
+spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.registration.naver.client-id=WzmdmwMl5xMq0AGaP7JC
-spring.security.oauth2.client.registration.naver.client-secret=tzkni2XplZ
+spring.security.oauth2.client.registration.naver.client-secret=9u_uY0CJLX
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8099/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.scope=name,email,profile
 
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.cm/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 ##kakao
